--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-server": "^20.0.0",
     "@angular/router": "^20.0.0",
     "@angular/ssr": "^20.0.3",
+    "@netlify/angular-runtime": "github:netlify/angular-runtime",
     "@tailwindcss/postcss": "^4.1.11",
     "express": "^5.1.0",
     "lucide-angular": "^0.525.0",
