--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/router": "^20.0.0",
     "@angular/ssr": "^20.0.3",
     "@netlify/angular-runtime": "github:netlify/angular-runtime",
+    "@ngx-translate/core": "^16.0.4",
+    "@ngx-translate/http-loader": "^16.0.1",
     "@tailwindcss/postcss": "^4.1.11",
     "express": "^5.1.0",
     "lucide-angular": "^0.525.0",
