--- a/netlify.toml
+++ b/netlify.toml
@@ -2,3 +2,19 @@
 command = "ng build"
 functions = "netlify/functions"
 publish = "dist/temp-mail/browser"
+
+
+[[redirects]]
+  from = "/10-minutes-temporary-email"
+  to = "/10-minutes-temporary-email/index.html"
+  status = 200
+
+[[redirects]]
+  from = "/saved/*"
+  to = "/.netlify/functions/ssr"
+  status = 200
+
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
