--- a/netlify.toml
+++ b/netlify.toml
@@ -1,11 +1,15 @@
 [build]
-command = "ng build"
-functions = "netlify/functions"
-publish = "dist/temp-mail/browser"
-
+  command = "ng build"
+  functions = "netlify/functions"
+  publish = "dist/temp-mail/browser"
 
 [[redirects]]
   from = "/10-minutes-temporary-email"
+  to = "/10-minutes-temporary-email/index.html"
+  status = 200
+
+[[redirects]]
+  from = "/10-minutes-temporary-email/"
   to = "/10-minutes-temporary-email/index.html"
   status = 200
 
