--- a/opera-extension/manifest.json
+++ b/opera-extension/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
-  "name": "Temporary Email Service",
+  "name": "Temporary Email Service for Opera",
   "version": "1.0.1",
-  "description": "Quick access to temporary email addresses for privacy and spam protection",
+  "description": "Quick access to temporary email addresses for privacy and spam protection - Opera Edition",
   "permissions": [
     "storage",
     "clipboardWrite"
@@ -16,10 +16,10 @@
     "default_popup": "popup.html",
     "default_title": "Temporary Email Service",
     "default_icon": {
-      "16": "icons/icon16.png",
-      "32": "icons/icon32.png",
-      "48": "icons/icon48.png",
-      "128": "icons/icon128.png"
+      "16": "icon16.png",
+      "32": "icon32.png",
+      "48": "icon48.png",
+      "128": "icon128.png"
     }
   },
   "background": {
@@ -33,15 +33,17 @@
     }
   ],
   "icons": {
-    "16": "icons/icon16.png",
-    "32": "icons/icon32.png",
-    "48": "icons/icon48.png",
-    "128": "icons/icon128.png"
+    "16": "icon16.png",
+    "32": "icon32.png",
+    "48": "icon48.png",
+    "128": "icon128.png"
   },
   "web_accessible_resources": [
     {
       "resources": ["popup.html", "popup.css", "popup.js"],
       "matches": ["<all_urls>"]
     }
-  ]
+  ],
+  "author": "Temporary Email Service",
+  "homepage_url": "https://tempmail4u.com"
 } 
