--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:temp-mail": "node dist/temp-mail/server/server.mjs"
+    "serve:ssr:temp-mail": "node dist/temp-mail/server/server.mjs",
+    "multi":"ng extract-i18n --output-path src/locale --format=xlf"
   },
   "private": true,
   "dependencies": {
