--- a/opera-extension/package.json
+++ b/opera-extension/package.json
@@ -40,5 +40,5 @@
   "bugs": {
     "url": "https://github.com/your-username/temporary-email-opera-extension/issues"
   },
-  "homepage": "https://tempmails.online"
+  "homepage": "https://tempmail4u.com"
 } 
