--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@netlify/angular-runtime": "github:netlify/angular-runtime",
     "@tailwindcss/postcss": "^4.1.11",
     "express": "^5.1.0",
+    "gtag": "^1.0.1",
     "lucide-angular": "^0.525.0",
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
@@ -36,6 +37,7 @@
     "@angular/cli": "^20.0.3",
     "@angular/compiler-cli": "^20.0.0",
     "@types/express": "^5.0.1",
+    "@types/google.analytics": "^0.0.46",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^20.17.19",
     "jasmine-core": "~5.7.0",
