--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "ar": "ng serve --configuration=ar",
+    "ar": "ng serve --configuration=ar --port 4201",
     "en": "ng serve --configuration=en",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "serve:ssr:temp-mail": "node dist/temp-mail/server/server.mjs",
-    "multi":"ng extract-i18n --output-path src/locale --format=xlf",
+    "multi": "ng extract-i18n --output-path src/locale --format=xlf",
     "i18n:extract": "ng extract-i18n --output-path src/locale --format=xlf",
     "i18n:check": "node scripts/check-missing-translations.js",
     "i18n:generate": "node scripts/generate-missing-translations.js"
