--- a/angular.json
+++ b/angular.json
@@ -4,18 +4,6 @@
   "newProjectRoot": "projects",
   "projects": {
     "temp-mail": {
-      "i18n": {
-        "sourceLocale": {
-          "code": "en-US",
-          "subPath": ""
-        },
-        "locales": {
-          "ar": {
-            "translation": "src/locale/messages.ar.json",
-            "subPath": "ar"
-          }
-        }
-      },
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -25,11 +13,9 @@
         "build": {
           "builder": "@angular/build:application",
           "options": {
-            "localize": true,
             "browser": "src/main.ts",
             "polyfills": [
-              "zone.js",
-              "@angular/localize/init"
+              "zone.js"
             ],
             "tsConfig": "tsconfig.app.json",
             "assets": [
@@ -49,28 +35,14 @@
             }
           },
           "configurations": {
-            "ar": {
-              "localize": [
-                "ar"
-              ]
-            },
-            "en": {
-              "localize": [
-                "en-US"
-              ]
-            },
+            "ar": {},
+            "en": {},
             "en-dev": {
-              "localize": [
-                "en-US"
-              ],
               "optimization": false,
               "extractLicenses": false,
               "sourceMap": true
             },
             "ar-dev": {
-              "localize": [
-                "ar"
-              ],
               "optimization": false,
               "extractLicenses": false,
               "sourceMap": true
@@ -122,16 +94,12 @@
           },
           "defaultConfiguration": "development"
         },
-        "extract-i18n": {
-          "builder": "@angular/build:extract-i18n"
-        },
         "test": {
           "builder": "@angular/build:karma",
           "options": {
             "polyfills": [
               "zone.js",
-              "zone.js/testing",
-              "@angular/localize/init"
+              "zone.js/testing"
             ],
             "tsConfig": "tsconfig.spec.json",
             "assets": [
