--- a/angular.json
+++ b/angular.json
@@ -13,6 +13,10 @@
           "ar": {
             "translation": "src/locale/messages.ar.json",
             "subPath": "ar"
+          },
+          "fr": {
+            "translation": "src/locale/messages.fr.json",
+            "subPath": "fr"
           }
         }
       },
@@ -54,6 +58,11 @@
                 "ar"
               ]
             },
+            "fr": {
+              "localize": [
+                "fr"
+              ]
+            },
             "en": {
               "localize": [
                 "en-US"
@@ -70,6 +79,14 @@
             "ar-dev": {
               "localize": [
                 "ar"
+              ],
+              "optimization": false,
+              "extractLicenses": false,
+              "sourceMap": true
+            },
+            "fr-dev": {
+              "localize": [
+                "fr"
               ],
               "optimization": false,
               "extractLicenses": false,
@@ -115,6 +132,9 @@
             },
             "ar": {
               "buildTarget": "temp-mail:build:ar-dev"
+            },
+            "fr": {
+              "buildTarget": "temp-mail:build:fr-dev"
             },
             "en": {
               "buildTarget": "temp-mail:build:en-dev"
