--- a/netlify.toml
+++ b/netlify.toml
@@ -2,3 +2,8 @@
 command = "ng build --localize"
 functions = "netlify/functions"
 publish = "dist/temp-mail/browser"
+
+
+[[edge_functions]]
+path = "/*"
+function = "block-bots"
