--- a/angular.json
+++ b/angular.json
@@ -118,8 +118,8 @@
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "4kB",
-                  "maximumError": "8kB"
+                  "maximumWarning": "4mB",
+                  "maximumError": "8mB"
                 }
               ],
               "outputHashing": "all",
